--- a/week2/style.css
+++ b/week2/style.css
@@ -176,10 +176,6 @@ main {
     font-size: 35px;
   }
 
-  .hero {
-    background-color: red;
-  }
-
   .card-container {
     flex-direction: row;
     flex-wrap: wrap;
@@ -209,11 +205,7 @@ main {
     font-size: 35px;
   }
 
-  .hero {
-    background-color: rgb(0, 187, 255);
-  }
-
-  .hamburger-menu,
+  .hamburger-menu.fa-solid,
   .mobile-menu {
     display: none;
   }
